--- a/game.html
+++ b/game.html
@@ -109,8 +109,9 @@
       <script src="js/html5shiv.js"></script>
     <![endif]-->
 
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <script>
+    var phrase;
         $(document).ready(function () {
             //RandomWord();
 			startLevelFromSpreadsheet();
